서버 연결하기

--- a/testProject1/src/main/resources/templates/example.html
+++ b/testProject1/src/main/resources/templates/example.html
@@ -13,7 +13,9 @@
 	<img src="/image/pajamaMarley.jpg">
 	<img src="/image/swimmingPartyMarley.jpg">
 	
-	<button id="btn">버튼</button>
+	<button id="btn">연결테스트</button>
+	<!-- id를 이벤트리스너인 onclick으로 변경할 때는 뒤에 () 를 붙여줌 -->
+	<button onclick="btn()">연결테스트</button>
 	<script src="/js/ex.js"></script>
 	</div>
 </body>
